--- a/WebContent/error1.xhtml
+++ b/WebContent/error1.xhtml
@@ -3,6 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html">
 	
-	<h1>OOPS</h1>
+	<h1>Please fill the form again</h1>
 	
 </html>	
