--- a/WebContent/success.xhtml
+++ b/WebContent/success.xhtml
@@ -3,6 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html">
 	
-	<h1>Welcome</h1>
+	<h1>Welcome Admin</h1>
 	
 </html>	
