--- a/WebContent/success1.xhtml
+++ b/WebContent/success1.xhtml
@@ -3,6 +3,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html">
 	
-	<h1>SUCCESS</h1>
+	<h1>Thank you for your registration...!!!</h1>
 	
 </html>	
