--- a/WebContent/error2.xhtml
+++ b/WebContent/error2.xhtml
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html">
 	
-	<h1>Please fill the form again</h1>
+	<h1>Enter a valid phone no of length 10 and try again</h1>
 	
-	<tr align="right"><a href="Register.xhtml">Click Here to register again</a></tr>
+	<tr align="right"><a href="Register.xhtml">Click Here to register</a></tr>
 	
 </html>	
